--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<!-- <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="">
-        <img src="../assets/img/logotipo.png" class="img-fluid logotipo" alt="Logotipo" />
-    </a>
-</nav> -->
-
 <router-outlet></router-outlet>
+
+<app-player></app-player>
