--- a/src/app/player/player.component.css
+++ b/src/app/player/player.component.css
@@ -54,3 +54,16 @@
 #pause-button {
     display: none;
 }
+
+#player .rotate {
+    animation: rotation 8s infinite linear;
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(359deg);
+    }
+}
