--- a/src/app/player/player.component.css
+++ b/src/app/player/player.component.css
@@ -20,6 +20,19 @@
     max-width: 60px;
 }
 
+#player .dj {
+    display: inline-block;
+    padding-right: 15px;
+    position: absolute;
+    bottom: 90px;
+    left: 0px;
+}
+
+#player .dj img {
+    height: 120px;
+    width: auto;
+}
+
 #player .info {
     text-align: right;
     display: inline-block;
