Dj picture disabled

--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,7 +1,7 @@
 <div id="player" class="container-fluid">
-    <div class="dj">
+    <!-- <div class="dj">
         <img src="/assets/djs/john-ospina.png" alt="John Ospina" class="img-fluid">
-    </div>
+    </div> -->
     <div class="row">
         <div class="col player-buttons">
             <a role="button" *ngIf="!playing" (click)="play()">
