--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,4 @@
 <!-- <router-outlet></router-outlet> -->
 
-<div class="container text-center">
-    <div class="text-center">
-        <img src="/assets/img/logotipo.png" alt="Logotipo Areito" class="img-fluid" style="max-width: 250px; margin-bottom: 10px; margin-top: 10px;">
-    </div>
-
-    <iframe
-        src="https://www6.cbox.ws/box/?boxid=822410&boxtag=zwuoNp"
-        width="100%"
-        height="450"
-        allowtransparency="yes"
-        allow="autoplay"
-        frameborder="0"
-        marginheight="0"
-        marginwidth="0"
-        scrolling="auto"
-        style="max-width: 640px;"
-    ></iframe>
-</div>
-
+<app-chat></app-chat>
 <app-player></app-player>
