--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,33 @@
-<!-- <router-outlet></router-outlet> -->
+<div id="contenido">
+    <!-- <router-outlet></router-outlet> -->
+    
+    <app-menu></app-menu>
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-md-7">
+                <app-chat></app-chat>
+            </div>
+            <div class="col-md-5 columna-redes-sociales">
+                <!-- Instagram -->
+                <div class="instagram">
+                    <div class="contenedor-iframe">
+                        <iframe src="http://instagram.com/p/BkBAxGAFfHw/embed" width="320" height="54" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
+                    </div>
+                </div>
+    
+                <!-- Facebook -->
+                <div class="facebook">
+                    <div class="fb-page" data-href="https://www.facebook.com/areitoeu" data-width="300" data-hide-cover="false" data-show-facepile="false"></div>
+                </div>
+    
+                <!-- Youtube -->
+                <div class="youtube">
+                    <div class="g-ytsubscribe" data-channelid="UC9IqsxkhZZ5ndjqAjEoHbpQ" data-layout="full" data-theme="dark" data-count="default"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-<app-chat></app-chat>
 <app-player></app-player>
