--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -2,5 +2,6 @@ iframe {
     border-radius: 10px;
     display: block;
     margin: auto;
-    box-shadow: 1px 1px 1px #f5f5f5;
+    margin-top: 25px;
+    height: 450px;
 }
