--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,12 +1,10 @@
 <iframe
     src="https://www6.cbox.ws/box/?boxid=822410&boxtag=zwuoNp"
     width="100%"
-    height="350"
-    allowtransparency="yes"
+    height="100%"
     allow="autoplay"
     frameborder="0"
     marginheight="0"
     marginwidth="0"
     scrolling="auto"
-    style="max-width: 640px"
 ></iframe>
