--- a/src/app/player/player.component.css
+++ b/src/app/player/player.component.css
@@ -1,12 +1,11 @@
 #player {
-    position: absolute;
-    bottom: 0;
-    max-height: 90px;
+    position:fixed;
+    bottom:0;
+    width:100%;
+    height:90px;
     background-color: #000000;
-    /* border-top: 3px solid #fa022b; */
     padding-top: 15px;
     padding-bottom: 15px;
-
     color: #ffffff;
 }
 
