Social Componenet created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,22 +9,7 @@
                 <app-chat></app-chat>
             </div>
             <div class="col-md-5 columna-redes-sociales">
-                <!-- Instagram -->
-                <div class="instagram">
-                    <div class="contenedor-iframe">
-                        <iframe src="https://instagram.com/p/BkBAxGAFfHw/embed" width="320" height="54" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
-                    </div>
-                </div>
-    
-                <!-- Facebook -->
-                <div class="facebook">
-                    <div class="fb-page" data-href="https://www.facebook.com/areitoeu" data-width="300" data-hide-cover="false" data-show-facepile="false"></div>
-                </div>
-    
-                <!-- Youtube -->
-                <div class="youtube">
-                    <div class="g-ytsubscribe" data-channelid="UC9IqsxkhZZ5ndjqAjEoHbpQ" data-layout="full" data-theme="dark" data-count="default"></div>
-                </div>
+                <app-social></app-social>
             </div>
         </div>
     </div>
