--- a/src/app/player/player.component.css
+++ b/src/app/player/player.component.css
@@ -1,11 +1,4 @@
 #player {
-    position:fixed;
-    bottom:0;
-    width:100%;
-    height:90px;
-    background-color: #000000;
-    padding-top: 15px;
-    padding-bottom: 15px;
     color: #ffffff;
 }
 
@@ -15,21 +8,8 @@
 }
 
 #player .cover img {
-    max-height: 60px;
-    max-width: 60px;
-}
-
-#player .dj {
-    display: inline-block;
-    padding-right: 15px;
-    position: absolute;
-    bottom: 90px;
-    left: 0px;
-}
-
-#player .dj img {
-    height: 120px;
-    width: auto;
+    max-height: 30px;
+    max-width: 30px;
 }
 
 #player .info {
@@ -52,7 +32,16 @@
     color: #dee2e6;
 }
 
-@media (max-width: 768px) {
+#player .info-cover {
+    display: inline-block;
+}
+
+#player .player-buttons {
+    display: inline-block;
+    margin-right: 15px;
+}
+
+@media (max-width: 767px) {
     #player .info .title,
     #player .info .artist {
         white-space: nowrap;
@@ -60,17 +49,20 @@
         text-overflow: ellipsis;
         max-width: 120px;
     }
-}
 
-#player .player-buttons {
-    max-width: 90px;
-    margin-bottom: 15px;
+    #player .player-buttons {
+        margin-right: 0px;
+    }
+
+    #player .info-cover {
+        display: none;
+    }
 }
 
 #player .player-buttons .bi-play-circle,
 #player .player-buttons .bi-pause-circle {
-    width: 60px;
-    height: 60px;
+    width: 30px;
+    height: 30px;
 }
 
 #pause-button {
