--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,11 +1,11 @@
 <nav role="navigation">
     <div id="menuToggle">
-        <input type="checkbox" />
+        <input type="checkbox" (change)="toggleMenu()" />
 
         <span></span>
         <span></span>
         <span></span>
-
+        
         <ul id="menu">
             <a href="#"><li class="text-center"><img src="/assets/img/logotipo.png" height="20" class="img-fluid" alt="Logotipo Areito"></li></a>
             <a href="#"><li>Chat</li></a>
