--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -119,7 +119,6 @@ nav {
 #menu {
     position: fixed;
     top: 0;
-    bottom: 0;
 
     width: 265px;
     height: 100%;
@@ -140,9 +139,9 @@ nav {
 
     overflow-y: scroll;
 
-    border-top: 1px solid #000000;
     border-right: 1px solid #000000;
-    border-bottom: 1px solid #000000;
+
+    margin-bottom: 0px;
 }
 
 #menu li {
