Routes created, home component created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<!-- <router-outlet></router-outlet> -->
 
 <app-menu (menuToggled)="toggleMenu($event)"></app-menu>
 
-<div class="container">
+<router-outlet></router-outlet>
+
+<!-- <div class="container">
     <div class="row">
         <div class="col-md-7">
             <app-chat></app-chat>
@@ -11,4 +12,4 @@
             <app-social></app-social>
         </div>
     </div>
-</div>
+</div> -->
