--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -1,7 +1,3 @@
 iframe {
-    border-radius: 10px;
-    display: block;
-    margin: auto;
-    margin-top: 25px;
-    height: 450px;
+    min-height: calc(100vh - 70px) !important;
 }
