User variable created in the auth service and chat moved to chat iframe

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,9 +8,10 @@
         
         <ul id="menu">
             <a routerLink="/"><li class="text-center"><img src="/assets/img/logotipo.png" height="20" class="img-fluid" alt="Logotipo Areito"></li></a>
-            <a routerLink="/chat"><li>Chat</li></a>
+            <a routerLink="/chat-frame"><li>Chat</li></a>
+            <a routerLink="/chat"><li>Chat propio</li></a>
             <a routerLink="/social"><li>Redes sociales</li></a>
-            <a href="#"><li>Politica de cookies</li></a>
+            <!-- <a href="#"><li>Politica de cookies</li></a> -->
             <a href="https://www.linkedin.com/in/juanpablomarinjimenez/" target="_blank" class="developer"><li>Developed by Juan Pablo Marín</li></a>
         </ul>
     </div>
