Chat message model and user model created

--- a/src/app/chat/chat-form/chat-form.component.html
+++ b/src/app/chat/chat-form/chat-form.component.html
@@ -1,2 +1,3 @@
-<input class="chatInput" [(ngModel)]="message" (keydown)="handleSubmit($event)" />
+<!-- <input class="chatInput" [(ngModel)]="message" (keydown)="handleSubmit($event)" /> -->
+<input class="chatInput" />
 <button class="chatButton" (click)="send()"></button>
