--- a/src/app/chat/chat-form/chat-form.component.html
+++ b/src/app/chat/chat-form/chat-form.component.html
@@ -1,3 +1,8 @@
-<!-- <input class="chatInput" [(ngModel)]="message" (keydown)="handleSubmit($event)" /> -->
-<input class="chatInput" />
-<button class="chatButton" (click)="send()"></button>
+<input 
+    class="chatInput" 
+    [(ngModel)]="message" 
+    (keydown)="handleSubmit($event)"
+    />
+
+<button class="chatButton" 
+  (click)=send()>Send</button>
