--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,1 +1,12 @@
-<chat-form></chat-form>
+<div class="mainContent">
+    <div class="userListWrapper">
+        <!-- <app-user-list></app-user-list> -->
+    </div>
+    <div #scroller class="feedWrapper">
+        <chat-feed></chat-feed>
+    </div>
+</div>
+
+<div class="chatFormWrapper">
+    <chat-form></chat-form>
+</div>
