--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,6 +1,6 @@
 <div class="mainContent">
     <div class="userListWrapper">
-        <!-- <app-user-list></app-user-list> -->
+        <chat-users-list></chat-users-list>
     </div>
     <div #scroller class="feedWrapper">
         <chat-feed></chat-feed>
