--- a/src/app/chat/chat-form/chat-form.component.css
+++ b/src/app/chat/chat-form/chat-form.component.css
@@ -1,11 +1,10 @@
 .chatInput {
     flex: 10;
     font-size: 1.3em;
-    font-family: "Open Sans", sans-serif;
     background-color: #eee;
     color: #000;
     transition: 0.1s ease-out;
-    padding-left: 80px;
+    padding-left: 15px;
 }
 
 .chatInput:focus {
@@ -19,8 +18,7 @@
     padding: 10px;
     padding: 8px 24px;
     font-size: 1.3em;
-    font-family: "Droid Sans", sans-serif;
-    background-color: #2a2845;
+    background-color: #fa082b;
     color: white;
     transition: 0.2s ease-out;
     min-width: 50px;
