Menu closes on route changed

--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -46,7 +46,7 @@ chat-form {
 }
 
 .userListWrapper {
-    background-color: ##00000099;
+    background-color: #00000099;
     color: #fff;
     display: flex;
     font-size: 1.2em;
