firebase service created, need to solve reload error in chat

--- a/src/app/chat/chat-form/chat-form.component.html
+++ b/src/app/chat/chat-form/chat-form.component.html
@@ -2,6 +2,7 @@
     class="chatInput" 
     [(ngModel)]="message" 
     (keydown)="handleSubmit($event)"
+    placeholder="Escribe un mensaje"
     />
 
 <button class="chatButton" 
