--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -12,6 +12,7 @@
             <a routerLink="chat" (click)="toggleMenu()"><li>Chat propio</li></a>
             <a routerLink="social" (click)="toggleMenu()"><li>Redes sociales</li></a>
             <a role="button" (click)="toggleMenu()"><li>Politica de cookies</li></a>
+            <a role="button" (click)="logout()"><li>Cerrar sesión</li></a>
             <a href="https://www.linkedin.com/in/juanpablomarinjimenez/" target="_blank" class="developer"><li>Developed by Juan Pablo Marín</li></a>
         </ul>
     </div>
