--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,9 +8,9 @@
         
         <ul id="menu">
             <a routerLink="/" (click)="toggleMenu()"><li class="text-center"><img src="/assets/img/logotipo.png" height="20" class="img-fluid" alt="Logotipo Areito"></li></a>
-            <a routerLink="chat-iframe" (click)="toggleMenu()"><li>Chat</li></a>
-            <a routerLink="chat" (click)="toggleMenu()"><li>Chat propio</li></a>
-            <a routerLink="social" (click)="toggleMenu()"><li>Redes sociales</li></a>
+            <!-- <a routerLink="chat-iframe" (click)="toggleMenu()"><li>Chat</li></a> -->
+            <a routerLink="chat" (click)="toggleMenu()"><li>Chat</li></a>
+            <!-- <a routerLink="social" (click)="toggleMenu()"><li>Redes sociales</li></a> -->
             <a role="button" (click)="toggleMenu()"><li>Politica de cookies</li></a>
             <a role="button" (click)="logout()"><li>Cerrar sesión</li></a>
             <a href="https://www.linkedin.com/in/juanpablomarinjimenez/" target="_blank" class="developer"><li>Developed by Juan Pablo Marín</li></a>
