google fonts roboto installed

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,1 +1,3 @@
-<a role="button" (click)="facebookSignInPopup()" class="fb connect">Iniciar sesión con Facebook</a>
+<div class="contenedor-login">
+    <a role="button" (click)="facebookSignInPopup()" class="fb connect">Iniciar sesión con Facebook</a>
+</div>
