--- a/src/app/auth/auth.component.css
+++ b/src/app/auth/auth.component.css
@@ -1,3 +1,10 @@
+.contenedor-login {
+    background-color: #ffffff8a;
+    padding: 50px 25px;
+    border-radius: 10px;
+}
+
+
 a.fb {
     font-family: Lucida Grande, Helvetica Neue, Helvetica, Arial, sans-serif;
     display: inline-block;
