Fixed problem sending message

--- a/src/app/chat/chat-message/chat-message.component.html
+++ b/src/app/chat/chat-message/chat-message.component.html
@@ -1,7 +1,7 @@
 <div class="messageContainer" [ngClass]="{ isOwnMessageContainer: isOwnMessage }">
     <div class="messageData" [ngClass]="{ isOwnMessageData: isOwnMessage }">
         <span class="sender" [ngClass]="{ isOwnSender: isOwnMessage }">
-            {{ userEmail }}
+            {{ displayName }}
         </span>
         <span class="timestamp" [ngClass]="{ isOwnTimestamp: isOwnMessage }">
             {{ timeStamp | date: "medium" }}
