--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <app-carousel></app-carousel>
 
 <div class="contenedor-login">
-    <app-auth></app-auth>
+    <a type="button" routerLink="/login" class="btn btn-primary">Login</a>
 </div>
