--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,21 +1,21 @@
 <div class="auth-container">
     <!-- Login -->
     <div class="content" [ngClass]="{left: loginMode, right: !loginMode}">
-        <div *ngIf="loginMode" class="wrapper">
+        <form #loginForm="ngForm" (ngSubmit)="login(loginForm)" *ngIf="loginMode" class="wrapper">
             <h2 class="text-center">Iniciar sesión</h2>
     
             <div class="form-group">
                 <label for="email">Correo electrónico</label>
-                <input type="email" id="email" class="form-control" placeholder="Introduce tu correo electrónico">
+                <input type="email" name="email" class="form-control" placeholder="Introduce tu correo electrónico" ngModel required>
             </div>
     
             <div class="form-group">
                 <label for="password">Contraseña</label>
-                <input type="password" id="password" class="form-control" placeholder="Introduce tu contraseña">
+                <input type="password" name="password" class="form-control" placeholder="Introduce tu contraseña" ngModel required>
             </div>
     
             <div class="form-group text-center">
-                <button type="button" class="btn btn-success btn-block">Iniciar sesión</button>
+                <button type="submit" class="btn btn-success btn-block">Iniciar sesión</button>
             </div>
     
             <div class="form-group text-center">
@@ -23,29 +23,29 @@
             </div>
     
             <p class="text-center"><a role="button" (click)="changeMode()">¿No tienes una cuenta? Registrate!</a></p>
-        </div>
+        </form>
 
         <!-- Register -->
-        <div *ngIf="!loginMode" class="wrapper">
+        <form #registerForm="ngForm" (ngSubmit)="register(registerForm)" *ngIf="!loginMode" class="wrapper">
             <h2 class="text-center">Registro</h2>
         
             <div class="form-group">
                 <label for="display-name">Nombre</label>
-                <input type="text" id="display-name" class="form-control" placeholder="Introduce tu nombre">
+                <input type="text" name="display-name" class="form-control" placeholder="Introduce tu nombre" ngModel required>
             </div>
         
             <div class="form-group">
                 <label for="email">Correo electrónico</label>
-                <input type="email" id="email" class="form-control" placeholder="Introduce tu correo electrónico">
+                <input type="email" name="email" class="form-control" placeholder="Introduce tu correo electrónico" ngModel required>
             </div>
         
             <div class="form-group">
                 <label for="password">Contraseña</label>
-                <input type="password" id="password" class="form-control" placeholder="Introduce tu contraseña">
+                <input type="password" name="password" class="form-control" placeholder="Introduce tu contraseña" ngModel required>
             </div>
         
             <div class="form-group">
-                <button type="button" class="btn btn-success btn-block">Registrarse</button>
+                <button type="submit" class="btn btn-success btn-block">Registrarse</button>
             </div>
         
             <div class="form-group text-center">
@@ -53,6 +53,6 @@
             </div>
         
             <p class="text-center"><a role="button" (click)="changeMode()">¿Ya tienes una cuenta? Inicia sesión!</a></p>
-        </div>
+        </form>
     </div>
 </div>
