--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -30,8 +30,8 @@
             <h2 class="text-center">Registro</h2>
         
             <div class="form-group">
-                <label for="display-name">Nombre</label>
-                <input type="text" name="display-name" class="form-control" placeholder="Introduce tu nombre" ngModel required>
+                <label for="displayName">Nombre</label>
+                <input type="text" name="displayName" class="form-control" placeholder="Introduce tu nombre" ngModel required>
             </div>
         
             <div class="form-group">
