--- a/src/app/chat/chat-user-item/chat-user-item.component.html
+++ b/src/app/chat/chat-user-item/chat-user-item.component.html
@@ -1,5 +1,5 @@
 <div class="userItem">
-    <!-- <span class="status" [ngClass]="user.status"> </span> -->
+    <span class="status" [ngClass]="user.status"> </span>
     <span class="userName">
         {{ user.displayName }}
     </span>
