--- a/src/app/chat/chat-user-item/chat-user-item.component.html
+++ b/src/app/chat/chat-user-item/chat-user-item.component.html
@@ -1,4 +1,4 @@
-<div class="userItem">
+<div *ngIf="user.status === 'online'" class="userItem">
     <span class="status" [ngClass]="user.status"> </span>
     <span class="userName">
         {{ user.displayName }}
