--- a/src/app/chat/chat-message/chat-message.component.html
+++ b/src/app/chat/chat-message/chat-message.component.html
@@ -4,7 +4,7 @@
             {{ displayName }}
         </span>
         <span class="timestamp" [ngClass]="{ isOwnTimestamp: isOwnMessage }">
-            {{ timeStamp | date: "medium" }}
+            {{ timeStamp | date: "shortTime" }}
         </span>
     </div>
     <div class="messageContent" [ngClass]="{ isOwnMessageContent: isOwnMessage }">
