--- a/src/app/chat/chat-message/chat-message.component.css
+++ b/src/app/chat/chat-message/chat-message.component.css
@@ -1,7 +1,7 @@
 .messageContainer {
     display: flex;
     height: auto;
-    width: 70%;
+    width: 55%;
     min-width: 400px;
     border-radius: 5px;
     align-items: stretch;
@@ -15,7 +15,7 @@
 }
 
 .messageData {
-    flex: 1;
+    flex: 2;
     padding: 10px;
     font-size: 0.7em;
 }
@@ -41,7 +41,7 @@
 
 .messageContent {
     height: auto;
-    flex: 9;
+    flex: 8;
     background-color: #fff;
     padding: 10px;
     border-top-right-radius: 5px;
@@ -51,4 +51,13 @@
 .isOwnMessageContent {
     background-color: #e3f2fd;
     color: #01579b;
+}
+
+
+@media(max-width: 576px) {
+    .messageContainer {
+        width: 100%;
+        min-width: 290px;
+        font-size: 13px;
+    }
 }
